<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@id/navigation_stadiums">

    <fragment
            android:id="@+id/navigation_stadiums"
            android:name="kg.bff.client.ui.stadium.list.StadiumsListFragment"
            android:label="@string/title_stadiums"
            tools:layout="@layout/fragment_stadiums_list" />

    <fragment
            android:id="@+id/navigation_map"
            android:name="kg.bff.client.ui.map.MapFragment"
            android:label="@string/title_map"
            tools:layout="@layout/fragment_map" />


    <fragment
            android:id="@+id/navigation_requests"
            android:name="kg.bff.client.ui.requests.list.RequestsFragment"
            android:label="@string/title_booking"
            tools:layout="@layout/fragment_requests" />
    <fragment
            android:id="@+id/navigation_profile"
            android:name="kg.bff.client.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile" >
        <action
                android:id="@+id/action_navigation_profile_to_editProfileFragment"
                app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
            android:id="@+id/editProfileFragment"
            android:name="kg.bff.client.ui.profile.EditProfileFragment"
            android:label="@string/title_edit"
            tools:layout="@layout/fragment_edit_profile" />
</navigation>
