<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_normal_16"
        tools:context=".ui.requests.detail.RequestDetailActivity">

    <TextView
            android:id="@+id/tv_request_stadium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/field"
            android:textSize="@dimen/font_normal_16"
            app:layout_constraintBottom_toBottomOf="@id/tv_request_stadium_name"
            app:layout_constraintEnd_toStartOf="@id/tv_request_stadium_name"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/tv_request_stadium_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/field"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/font_large_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_request_stadium"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_request_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="@dimen/font_normal_16"
            app:layout_constraintBottom_toBottomOf="@id/tv_request_status_text"
            app:layout_constraintEnd_toStartOf="@id/tv_request_status_text"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/tv_request_status_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:text="@string/status"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/font_large_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_request_stadium"
            app:layout_constraintTop_toBottomOf="@id/tv_request_stadium_name" />

    <TextView
            android:id="@+id/tv_request_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:text="@string/time"
            android:textSize="@dimen/font_normal_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_request_status" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_request_detail_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/spacing_normal_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_request_time"
            app:layout_constraintTop_toTopOf="@id/tv_request_time" />

    <Button
            android:id="@+id/btn_delete_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:background="@drawable/button_style"
            android:backgroundTint="@color/colorSecondary"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/rv_request_detail_time" />

    <ProgressBar
            android:id="@+id/pb_delete_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>